fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -529,7 +529,7 @@ h2.post-subheading{
 /* --- Post and page headers --- */
 
 .intro-header {
-  margin: 80px 0 20px;
+  margin: 80px 0 0;
   position: relative;
 }
 .intro-header.big-img {
@@ -567,6 +567,7 @@ h2.post-subheading{
 }
 .intro-header .page-heading {
   text-align: center;
+  margin-top: 1rem;
 }
 .intro-header.big-img .page-heading,
 .intro-header.big-img .post-heading {
